--- a/Rapport 1/rapport1.tex
+++ b/Rapport 1/rapport1.tex
@@ -154,130 +154,146 @@ The goal for this lab was measuring time, and comparing three methods of doing s
 
         \subsection{Measuring lengths}
             \subsubsection{\label{subsubsect:strings}Length of string}
-                When measuring the length of the string, we measured it between the middle of the two strings, from the bottom and top of the aluminum at the top and bottom parts of the string respectively. We took great care to ensure that the pendulum was at rest when making the measurement, and kept our heads level with the ruler, and one eye closed when taking the reading in an attempt to minimize any misreading due to parallax. We also rested the Hultafors meter-rule against a right-angle ruler in an additional attempt to minimize the error. We took 3 repeated readings, one of which was performed by a different person. 
+                When measuring the length of the string, we measured it between the middle of the two strings, from the bottom and top of the aluminum at the top and bottom parts of the string respectively. We took great care to ensure that the pendulum was at rest when making the measurement, and kept our heads level with the ruler, and one eye closed when taking the reading in an attempt to minimize any misreading due to parallax. We also rested the Hultafors meter-rule against a right-angle ruler in an additional attempt to keep it stable and upright. We took 3 repeated readings, one of which was performed by a different person. 
 
                 After we had completed our measurements with the hourglass, we noticed a rather large initial rotational and sideways instability in the pendulum, leading us to (mistakingly, see section \ref{disc_problems}) shorten the string by roughly 10cm. After having changed the length of the string, we repeated the exact same procedure of measuring the new length except we only did two measurements, again alternating who took the reading.
 
             \subsubsection{\label{subsubsect:dim_cyllinder}Dimensions of cylinder}
-                The cylinder, and bracket on top where the string is connected was also measured using the Hultafors meter-rule. This time, we only made one measurement per length, all done by the same person. Other than that, similar considerations were made as when measuring the string.
+                The cylinder, and the T-bracket on top where the string is connected was also measured using the Hultafors meter-rule. This time, we only made one measurement per length, all done by the same person. Other than that, similar considerations were made as when measuring the string.
 
 
 
 
 
 \section{\label{sect:results}Results}
-    
+   
+    \subsection{Recorded lengths and dimensions}
+
         \begin{table}[h] % Length of string
-        \center
-        \caption{Length of string}
-        \label{tab:stopwatch}
-        \begin{tabular}{| p{5cm} | l | l | l |}
-            \hline
-            Measurement No. & 1 & 2 & 3 \\ \hline 
-            Length, Hourglass experiment [cm] ($\pm 0.1cm$) 
-            & 53.4 & 52.9 & 52.9\\ \hline
-            Length, Stopwatch \& Photo-diode experiment [cm] ($\pm 0.1cm$) 
-            & 45.3 & 45.2 &  \\ \hline
-        \end{tabular}
-    \end{table}
+            \center
+            \caption{Length of string}
+            \label{tab:stopwatch}
+            \begin{tabular}{| p{5cm} | l | l | l |}
+                \hline
+                Measurement No. & 1 & 2 & 3 \\ \hline 
+                Length, Hourglass experiment [cm] ($\pm 0.1cm$) 
+                & 53.4 & 52.9 & 52.9\\ \hline
+                Length, Stopwatch \& Photo-diode experiment [cm] ($\pm 0.1cm$) 
+                & 45.3 & 45.2 &  \\ \hline
+            \end{tabular}
+        \end{table}
 
-	\subsection{Pendulum \& Hourglass}
+        \begin{table}[h] % Length of string
+            \center
+            \caption{Dimensions of Cylinder}
+            \label{tab:cylinder}
+            \begin{tabular}{| l | l |}
+                \hline
+                Height [cm] ($\pm 0.1$)& 10.2 \\ \hline 
+                Diameter [cm] ($\pm 0.1$)& 9.7 \\ \hline
 
-    The number of oscillations during the draining of the hourglass is listed on table \ref{tab:hourglass}
+            \end{tabular}
+        \end{table}
 
-	\begin{table}[h] % Pendulum and hourglass
-        \center
-        \caption{Measurements with Hourglass}
-        \label{tab:hourglass}
-        \begin{tabular}{| l | l |}
-            \hline
-            Recording no. & Number of oscillations $(\pm 1)$\\ \hline
-            1 & 116 \\ \hline
-            2 & 121 \\ \hline
-            3 & 128 \\ \hline
-            \hline
-            Mean & 122 \\ \hline
-            Std. Dev. & 5 \\\hline
-        \end{tabular}
-	\end{table}
+	\subsection{Period recorded with hourglass}
 
-	\subsection{Pendulum \& Stopwatch}
+        The number of oscillations during the draining of the hourglass is listed on table \ref{tab:hourglass}
 
-    The period of the pendulum measured with the stopwatch is listed on table \ref{tab:stopwatch}
+    	\begin{table}[h] % Pendulum and hourglass
+            \center
+            \caption{Measurements with Hourglass}
+            \label{tab:hourglass}
+            \begin{tabular}{| l | l |}
+                \hline
+                Recording no. & Number of oscillations $(\pm 1)$\\ \hline
+                1 & 116 \\ \hline
+                2 & 121 \\ \hline
+                3 & 128 \\ \hline
+                \hline
+                Mean & 122 \\ \hline
+                Std. Dev. & 5 \\\hline
+            \end{tabular}
+    	\end{table}
 
-	\begin{table}[h] % Pendulum and stopwatch
-        \center
-        \caption{Measurements with Stopwatch}
-        \label{tab:stopwatch}
-	    \begin{tabular}{| p{1.5cm} | p{2cm} | p{2cm} |}
-		    \hline
-		    Number of periods & Time per 10 oscillations [sec] ($\pm 0.01$) & Total time [min:sec] ($\pm 0.01$)\\ \hline
-		    10 & 14.14 & 14.14 \\ \hline
-		    20 & 14.31 & 28.53 \\ \hline
-		    30 & 14.32 & 42.85 \\ \hline
-		    40 & 14.40 & 57.25 \\ \hline
-		    50 & 14.29 & 1:11.54 \\ \hline
-		    60 & 14.39 & 1:25.93 \\ \hline
-		    70 & 14.29 & 1:40.72 \\ \hline
-		    80 & 14.34 & 1:54.46 \\ \hline
-		    90 & 14.20 & 2:08.76 \\ \hline
-		    100 & 14.52 & 2:23.28 \\ \hline
-            \hline
-            Mean period & 14.33 & N/A \\ \hline
-            Std. Dev & 0.10 & N/A \\ \hline
-        \end{tabular}
-    \end{table}
-    
-    \subsection{Pendulum \& Photo-diode}
+	\subsection{Period recorded with stopwatch}
 
-    Fig.\ref{fig:data1}, Fig.\ref{fig:data2}, Fig.\ref{fig:data3} and Fig.\ref{fig:data4} shows the result from experiments 1-4 listed on table \ref{tab:photodiode} respectively.
+        The period of the pendulum measured with the stopwatch is listed on table \ref{tab:stopwatch}
 
-    \begin{table}[h] % Pendulum and stopwatch
-        \caption{Measurements with photo-diode}
-        \label{tab:photodiode}
-        \begin{tabular}{| p{1.6cm} | p{1.4cm} | p{1.1cm} | p{1.3cm} | p{1.3cm} | p{1.5cm} |}
-            \hline
-            Experiment no. & Standard deviation of mean period & Mean period & Position of diode & Total measured time [s] & Measuring frequency [KHz] \\ \hline
-            1 & 5.6540e-4 & 1.4421 & Bottom & 120 & 25 \\ \hline
-            2 & 8.8552e-4 & 1.4502 & Bottom & 120 & 200 \\ \hline
-            3 & 0.0483 & 1.5816 & top & 120 & 25 \\ \hline
-            4 & 0.0026 & 1.4922 & Bottom & 120 & 25 \\ \hline
-        \end{tabular}
-    \end{table}
-    
-    \begin{figure}[h!]
-    	\center
-    	\includegraphics[scale=0.6]{forsok1fig1}
-    	\caption{Data from Experiment no. 1 using the photo-diode
-    	\footnote{Due to poor planning on my part, this figure, and the following all lack figure titles. I mistakingly did not keep all of the .mat files
-    	}}
-        \label{fig:data1}
-    \end{figure}
+    	\begin{table}[h] % Pendulum and stopwatch
+            \center
+            \caption{Measurements with Stopwatch}
+            \label{tab:stopwatch}
+    	    \begin{tabular}{| p{1.5cm} | p{2cm} | p{2cm} |}
+    		    \hline
+    		    Number of periods & Time per 10 oscillations [sec] ($\pm 0.01$) & Total time [min:sec] ($\pm 0.01$)\\ \hline
+    		    10 & 14.14 & 14.14 \\ \hline
+    		    20 & 14.31 & 28.53 \\ \hline
+    		    30 & 14.32 & 42.85 \\ \hline
+    		    40 & 14.40 & 57.25 \\ \hline
+    		    50 & 14.29 & 1:11.54 \\ \hline
+    		    60 & 14.39 & 1:25.93 \\ \hline
+    		    70 & 14.29 & 1:40.72 \\ \hline
+    		    80 & 14.34 & 1:54.46 \\ \hline
+    		    90 & 14.20 & 2:08.76 \\ \hline
+    		    100 & 14.52 & 2:23.28 \\ \hline
+                \hline
+                Mean period & 14.33 & N/A \\ \hline
+                Std. Dev & 0.10 & N/A \\ \hline
+            \end{tabular}
+        \end{table}
+        
+    \subsection{Period recorded with photo-diode}
 
-    \begin{figure}[h!]
-    	\center
-    	\includegraphics[scale=0.6]{forsok2fig1}
-    	\caption{Data from Experiment no. 2 using the photo-diode}
-        \label{fig:data2}
-    \end{figure}
+        Fig.\ref{fig:data1}, Fig.\ref{fig:data2}, Fig.\ref{fig:data3} and Fig.\ref{fig:data4} shows the result from experiments 1-4 listed on table \ref{tab:photodiode} respectively.
 
-    \begin{figure}[h!]
-    	\center
-    	\includegraphics[scale=0.6]{forsok3fig1}
-    	\caption{Data from Experiment no. 3 using the photo-diode}
-        \label{fig:data3}
-    \end{figure}
+        \begin{table}[h] % Pendulum and stopwatch
+            \caption{Measurements with photo-diode}
+            \label{tab:photodiode}
+            \begin{tabular}{| p{1.6cm} | p{1.4cm} | p{1.1cm} | p{1.3cm} | p{1.3cm} | p{1.5cm} |}
+                \hline
+                Experiment no. & Standard deviation of mean period & Mean period & Position of diode & Total measured time [s] & Measuring frequency [KHz] \\ \hline
+                1 & 5.6540e-4 & 1.4421 & Bottom & 120 & 25 \\ \hline
+                2 & 8.8552e-4 & 1.4502 & Bottom & 120 & 200 \\ \hline
+                3 & 0.0483 & 1.5816 & top & 120 & 25 \\ \hline
+                4 & 0.0026 & 1.4922 & Bottom & 120 & 25 \\ \hline
+            \end{tabular}
+        \end{table}
+        
+        \begin{figure}[h!]
+        	\center
+        	\includegraphics[scale=0.6]{forsok1fig1}
+        	\caption{Data from Experiment no. 1 using the photo-diode
+        	\footnote{Due to poor planning on my part, this figure, and the following all lack figure titles. I mistakingly did not keep all of the .mat files
+        	}}
+            \label{fig:data1}
+        \end{figure}
 
-    \begin{figure}[h!]
-    	\center
-    	\includegraphics[scale=0.6]{forsok4fig1}
-    	\caption{Data from Experiment no. 4 using the photo-diode}
-        \label{fig:data4}
-    \end{figure}
+        \begin{figure}[h!]
+        	\center
+        	\includegraphics[scale=0.6]{forsok2fig1}
+        	\caption{Data from Experiment no. 2 using the photo-diode}
+            \label{fig:data2}
+        \end{figure}
 
-\section{Discussion}
+        \begin{figure}[h!]
+        	\center
+        	\includegraphics[scale=0.6]{forsok3fig1}
+        	\caption{Data from Experiment no. 3 using the photo-diode}
+            \label{fig:data3}
+        \end{figure}
+
+        \begin{figure}[h!]
+        	\center
+        	\includegraphics[scale=0.6]{forsok4fig1}
+        	\caption{Data from Experiment no. 4 using the photo-diode}
+            \label{fig:data4}
+        \end{figure}
+
     \subsection{\label{disc_problems}Problems}
         As mentioned in the introduction, we did make one rather large experimental error, which does taint our data somewhat. After having completed our measurements with the Hourglass, we noticed a rather large initial sideways and rotational instability when attempting to start the pendulum for our measurements with the stopwatch. In order to minimize this instability, we decided to shorten the string, not considering the ramification this had on our data.
+
+
+\section{Discussion}
 
  
 \section{Conclusion}
